2002-12-05  David Carlton  <carlton@math.stanford.edu>

	* symtab.c (lookup_symbol_aux_local): Add 'static_block'
	argument.
	(lookup_symbol_aux): Do the 'field_of_this' check before checking
	the static block.  See PR gdb/804.

2002-12-05  David Carlton  <carlton@math.stanford.edu>

	* symtab.c (lookup_symbol_aux_block): New function.
	(lookup_symbol_aux_local): Move code into lookup_symbol_aux_block.

2002-12-05  Andrew Cagney  <ac131313@redhat.com>

	* gdbarch.sh: Dump the predicate function and macro values.
	(read): Print error on standard error.
	* gdbarch.c: Regenerate.
	
2002-12-04  Kevin Buettner  <kevinb@redhat.com>

	* Makefile.in (mips_tdep_h): Define.
	(mips-tdep.o): Add mips_tdep_h to dependency list.
	* mips-tdep.h: New file.
	* mips-tdep.c (mips-tdep.h): Include.
	(enum mips_abi): Move to mips-tdep.h.
	(mips_abi): New function.

2002-12-04  David Carlton  <carlton@math.stanford.edu>

	* Makefile.in (f-exp.tab.c): Don't depend on c-exp.tab.c.

2002-12-04  David Carlton  <carlton@math.stanford.edu>

	* symtab.c (lookup_symbol_aux): Move minsym code into a separate
	function.
	(lookup_symbol_aux_minsyms): New function.

2002-12-04  J. Brobecker  <brobecker@gnat.com>

	* pa64solib.c: s/boolean/int/. Fixes a build failure on hppa64-hpux.

2002-12-04  J. Brobecker  <brobecker@gnat.com>

	* config/pa/tm-hppah.h (PC_IN_SIGTRAMP): Renamed from IN_SIGTRAMP,
	which is an obsolete macro name.

2002-12-04  Daniel Jacobowitz  <drow@mvista.com>

	* doublest.c (convert_floatformat_to_doublest): Cast exp_bias to int.
	* config/alpha/alpha-linux.mh (MH_CFLAGS): Add -mieee.

2002-12-03  H.J. Lu  (hjl@gnu.org)

	* breakpoint.c (create_thread_event_breakpoint): Use xasprintf.
	(create_breakpoints): Make sure the addr_string field is not
	NULL.

2002-12-03  Andrew Cagney  <ac131313@redhat.com>

	* sparc-nat.c (fetch_inferior_registers)
	(store_inferior_registers): Add comment on problem of LWP vs
	threads.
	
	From 2002-11-21 Daniel Jacobowitz <drow@mvista.com>